--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,6 +18,16 @@ phases:
       - echo Building the Docker image...
       - docker build --build-arg snyk_auth_token=$SNYK_TOKEN -t $REPOSITORY_URI:latest .
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+      - latest_version=$(curl -Is "https://github.com/snyk/cli/releases/latest" | grep "^location" | sed 's#.*tag/##g' | tr -d "\r")
+      - snyk_cli_dl_linux="https://github.com/snyk/cli/releases/download/${latest_version}/snyk-linux"
+      - curl -Lo /usr/local/bin/snyk $snyk_cli_dl_linux
+      - chmod +x /usr/local/bin/snyk
+      # authenticate the Snyk CLI
+      - snyk auth $SNYK_TOKEN
+      # perform a Snyk SCA scan; continue if vulnerabilities are found
+      - snyk test || true
+      # upload a snapshot of the project to Snyk for continuous monitoring
+      - snyk monitor
   post_build:
     commands:
       - echo Build completed on `date`
